...
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="Movie Title" />
...
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:numStars="5"
                            android:progressTint="#ffba49" />

                        <TextView
                            android:id="@+id/vote_average_movie_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:textColor="#9b9b9b"
                            android:textSize="20sp"
                            tools:text="7.0" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/release_date_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#4a4a4a"
                        android:textSize="16sp"
                        tools:text="December 31, 1997" />
...
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="false">

                        <ImageView
                            android:id="@+id/poster_movie_detail"
                            android:layout_width="125dp"
                            android:layout_height="195dp"
                            android:scaleType="centerCrop"
                            tools:ignore="ContentDescription"
                            tools:src="@color/colorAccent" />

...
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="Original Title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#9b9b9b" />

                    <TextView
                        android:id="@+id/original_title_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Original Movie Title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#4a4a4a" />

...
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="Original Language"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#9b9b9b" />

                    <TextView
                        android:id="@+id/original_language_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="xxx"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#4a4a4a" />

...
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="Popularity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#9b9b9b" />

                    <TextView
                        android:id="@+id/popularity_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="xxx"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#4a4a4a" />

...
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="Vote Count"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#9b9b9b" />

                    <TextView
                        android:id="@+id/vote_count_movie_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="xxx"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="#4a4a4a" />

...
