<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_to_favorite"
        android:background="?attr/actionBarItemBackground"
        android:icon="@drawable/ic_favored"
        android:title="@string/menu_to_favorite"
        app:showAsAction="always" />
</menu>